syntax = "proto3";

option java_package = "com.errabi.ishop";
option java_outer_classname = "Product";
option java_multiple_files = true;

service GreeterService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}